---------------------------------------------------------------------------------------------------
Version: 0.25.1
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.25.0
Date: 2023-09-25
  Features:
    - Added module preloading, which allows creating bot requests for modules even if the assembling machine is not high enough tier.
  Gui:
    - Clarified some descriptions in project settings.
    - Removed cutting off of text on various buttons.
---------------------------------------------------------------------------------------------------
Version: 0.24.3
Date: 2023-09-25
  Bugfixes:
    - Fix (harmless) error message when upgrading belt via blueprint paste.
---------------------------------------------------------------------------------------------------
Version: 0.24.2
Date: 2023-09-24
  Bugfixes:
    - Fixed issue when pasting underground belts via blueprint, that gets flipped due to an existing underground belt pair.
    - Fixed upgrading underground belts via blueprint paste.
---------------------------------------------------------------------------------------------------
Version: 0.24.1
Date: 2023-09-24
  Changes:
    - Using the cleanup tool will try to fix flipped underground belts.
---------------------------------------------------------------------------------------------------
Version: 0.24.0
Date: 2023-09-22
  Changes:
    - Greatly relaxed restrictions for editing underground belts.
    - Underground belts forced to be in a wrong direction due to another underground belt pair, will now be shown as an error.
    - Fixed multiple quirks and bugs related to underground belts.
---------------------------------------------------------------------------------------------------
Version: 0.23.3
Date: 2023-09-18
  Bugfixes:
    - Fixed various issues when migrating from earlier versions.